--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
+  "type": "module",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.22.0"
+    "@aws-sdk/client-dynamodb": "^3.22.0",
+    "@aws-sdk/client-s3": "^3.22.0",
+    "@aws-sdk/lib-storage": "^3.22.0"
   }
 }
