--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+temp_*
 # Created by https://www.toptal.com/developers/gitignore/api/macos,node
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,node
 
